--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
                     <select name="nombre" id="mySelect">
                         <option value="">"Nombre del producto"</option>
                         {% for nombre in nombres %}
-                            <option value="{{ nombre[0] }}">{{ nombre[0] }}</option>
+                            <option value="{{ nombre }}">{{ nombre }}</option>
                         {% endfor %}
                     </select>
                     <br><br>
@@ -38,7 +38,7 @@
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
     <div class="fother">
-        <p><a href="https://github.com/Davidgr04" id="colorful-paragraph">📲@David García</a></p>
+        <p><a href="https://github.com/Davidgr04/ProductosBigData" id="colorful-paragraph">📲@David García</a></p>
     </div>
 </body>
 
