--- a/templates/buscar.html
+++ b/templates/buscar.html
@@ -37,7 +37,7 @@
     <br><br><br><br><br><br><br>
 
     <div class="fother">
-        <p><a href="https://github.com/Davidgr04" id="colorful-paragraph">📲@David García</a></p>
+        <p><a href="/pdf/DOSIER PROYECTO FINAL M14.pdf" download target id="colorful-paragraph">Descargar dosier de practica</a></p>
     </div>
 </body>
 
