--- a/templates/buscar.html
+++ b/templates/buscar.html
@@ -28,13 +28,14 @@
                     <p id="">{{ precio }}€</p>
                     <h3>Categoria del Producto</h3>
                     <p id="">{{ categoria }}.</p>
-                    <br><br>
+                    <!-- <h3>Imagen</h3>
+                    <img src="" alt="imagen del producto"> -->
+
 
                 </form>
             </tr>
         </tbody>
     </div>
-    <br><br><br><br><br><br><br>
 
     <div class="fother">
         <p><a href="/pdf/DOSIER PROYECTO FINAL M14.pdf" download target id="colorful-paragraph">Descargar dosier de practica</a></p>
