--- a/templates/buscar.html
+++ b/templates/buscar.html
@@ -29,16 +29,15 @@
                     <h3>Categoria del Producto</h3>
                     <p id="">{{ categoria }}.</p>
                     <!-- <h3>Imagen</h3>
-                    <img src="" alt="imagen del producto"> -->
-
-
+                    <img src="" alt="{{ data.img_error }}"> -->
+                    <br><br><br><br><br><br><br><br><br><br>
                 </form>
             </tr>
         </tbody>
     </div>
 
     <div class="fother">
-        <p><a href="/pdf/DOSIER PROYECTO FINAL M14.pdf" download target id="colorful-paragraph">Descargar dosier de practica</a></p>
+        <p><a href="../pdf/DOSIER PROYECTO FINAL M14.pdf" download target id="colorful-paragraph">Descargar dosier de practica</a></p>
     </div>
 </body>
 
