--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Productos</title>
+    <title style="color: rebeccapurple;">TodoProductos</title>
     <link rel="stylesheet" href="/static/main.css">
     <link rel="icon" href="/static/ico.png" type="image/x-icon">
     <script src="/js/main.js"></script>
@@ -13,10 +13,10 @@
 
 <body>
     <br>
-    <div id="header">
-        <h1 style="color: orange; text-align: center;">{{ data.titulo }}</h1>
+    <div style="padding-left: 23%;">
+        <img class="centrar-imagen" src="../static/logo_completo.png" alt="">
     </div>
-    <h2 style="color: rgb(0, 0, 0); padding-left: 6%;">{{ data.bienvenida }}</h2>
+    <h2 style="color: rgb(0, 0, 0); padding-left: 1%;">{{ data.bienvenida }}</h2>
 
     <div style="padding-left: 10px;">
         <h3>Nombre del Producto:</h3>
@@ -35,9 +35,13 @@
             </tr>
         </tbody>
     </div>
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br>
+    <br><br><br><br>
+
     <div class="fother">
-        <p><a href="https://github.com/Davidgr04/ProductosBigData" id="colorful-paragraph">📲@David García</a></p>
+        <p><a href="https://blog.hubspot.es/service/que-es-soporte-tecnico" id="colorful-paragraph">📲Servicio Tecnico</a></p>
+        <br>
+        <p><a href="https://api.whatsapp.com/send/?phone=%2B34631586844&text&type=phone_number&app_absent=0" id="colorful-paragraph">Via WhatsApp</a> <a href="https://www.instagram.com/daaviidd_02/" id="colorful-paragraph">Via Instagram</a></p>
     </div>
 </body>
 
